Closed Bug 522919 Opened 16 years ago Closed 16 years ago

Focus lost in BM manager after closing Tabsposé

Categories

(Camino Graveyard :: Tabbed Browsing, defect)

All
macOS
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED
Camino2.0

People

(Reporter: phiw2, Assigned: stuart.morgan+bugzilla)

Details

(Keywords: regression, Whiteboard: [camino-2.0])

Attachments

(1 file)

STR 1. open multiple tabs, one tab being the BM manager 2. open Tabsposé 3. switch to the BM manager in Tabsposé or 3a. (if the BM Manager was the active tab) close Tabsposé without switching tabs AR: after closing Tabsposé, the BM manager has completely lost focus, tabbing has no effect (beep). ER: the focus is on the BM manager Keyboard shortcuts still work, though. Before the patch in bug 461106, it sorta worked: the focus was not back on the selected bookmark, but one tab would put the focus on the left column.
Flags: camino2.0?
Hardware: x86 → All
Attached patch fixSplinter Review
Assignee: nobody → stuart.morgan+bugzilla
Status: NEW → ASSIGNED
Attachment #408377 - Flags: superreview?(mikepinkerton)
Flags: camino2.0?
Target Milestone: --- → Camino2.0
Attachment #408377 - Flags: superreview?(mikepinkerton) → superreview+
Landed on CVS trunk and CAMINO_2_0_BRANCH.
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Whiteboard: [camino-2.0]
works well now. Thanks you. verified with Version 2.0 (1.9.0.15 2009102617)
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: