Camino only - Bug 522919: Focus the bookmark manager correctly when switching to it from tab overview. sr=pink